# osu-skin-configurator

./: .gitattributes  .gitignore  README.md  README.zh-CN.md  osu-settings.json  package-lock.json  package.json  release-v1.0.1.md  release-v1.1.0.md  release-v1.1.1.md  release-v1.2.0.md
.claude/: settings.local.json
.githooks/: pre-commit
docs/: row-activation-design.md
scripts/: launch.js  migrate-osp.bat  migrate-osp.js  sync-version.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: config_store.rs  file_assoc.rs  foreground.rs  global_shortcut.rs  i18n.rs  ini_reader.rs  lib.rs  main.rs  osu_path.rs  preset_applier.rs  preset_manager.rs  skin_scanner.rs
src/main/: config-store.js  electron-shim.js  foreground-detector.js  global-shortcut-manager.js  ini-reader.js  ipc-handlers.js  main.js  osu-path.js  preload.js  preset-applier.js  preset-manager.js  register-file-assoc.js  skin-scanner.js
src/renderer/: index.html
src/renderer/css/: base.css  components.css  layout.css  variables.css
src/renderer/js/: api.js  app.js  i18n.js  shortcuts.js  state.js  tauri-api.js
src/renderer/js/components/: apply-dialog.js  color-picker.js  cursor-particles.js  file-copy-editor.js  gl-preview.js  info-dialog.js  ini-editor.js  preset-editor.js  preset-list.js  preset-selector.js  preview-upload.js  selection.js  settings-view.js  skin-list.js  source-picker.js  tint-editor.js  toast.js  update-check.js
src/renderer/js/locales/: en.json  ja.json  ko-KR.json  ru-RU.json  zh-CN.json  zh-TW.json
src/renderer/js/utils/: ini-field-defs.js  input-confirm.js  op-table.js
