[package]
name = "osu-skin-configurator"
version = "1.0.0"
description = "osu! 皮肤配置工具"
authors = ["Citrusis"]
edition = "2021"

[lib]
name = "osu_skin_configurator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"
# Used only for the GitHub update check + installer download.
# default-features=false + rustls-tls avoids pulling native OpenSSL on Windows.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
winreg = "0.52"
sysinfo = "0.32"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
panic = "abort"
