[package]
name = "osu-skin-configurator"
version = "1.1.0"
description = "osu! 皮肤配置工具"
authors = ["Citrusis"]
edition = "2021"

[lib]
name = "osu_skin_configurator_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-store = "2"
tauri-plugin-opener = "2"
tauri-plugin-decorum = "0.1"
# Disable default webview/browser shortcuts (Ctrl+F, Ctrl+P, F3, etc.) at the
# webview layer; JS preventDefault can't stop system-level keys like F5.
tauri-plugin-prevent-default = { version = "5", features = ["platform-windows"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
base64 = "0.22"
# Image decode/encode for the tint (recolor) feature.
image = { version = "0.25", default-features = false, features = ["png"] }
# Parallel pixel processing for large-image generation.
rayon = "1"
# Used only for the GitHub update check + installer download.
# rustls-tls-native-roots uses Windows system root certs (no OpenSSL needed).
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls-native-roots", "stream"] }
futures-util = "0.3"
# OS locale detection for backend-side i18n.
sys-locale = "0.3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_Registry",
    "Win32_UI_Shell",
] }
winreg = "0.52"
sysinfo = "0.32"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
